[tool.poetry]
name = "Lineage"
version = "0.6.1"
description = ""
authors = ["Aqdas <aqdasak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.5"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
